--- a/wp-content/themes/thefix/blocks/cta/cta.scss
+++ b/wp-content/themes/thefix/blocks/cta/cta.scss
@@ -5,7 +5,7 @@
 	border-radius: var(--border-radius);
 	padding-top: var(--spacing-s);
 	// padding-bottom: var(--spacing);
-	margin: 0 2rem 1rem 2rem;
+	margin: 0 1rem 1rem 1rem;
 	@include mq(medium) {
 		padding-top: var(--spacing);
 		flex-direction: column;
